Added the SSH server status to the System Information page, including the ability to stop and start it.
Made the docutils Python module optional for MoinMoin installs, as it is missing on CentOS.
Added a --plan flag to modify-reseller.pl, to allow setting of limits from a plan.
Added a Module Config option to control if default features come from plan or Features and Plugins page.
Greylisting using Postgrey can now be setup using Virtualmin, via the new Email Greylisting page. In addition, whitelists for SMTP servers and email recipents can be managed.
Added the --no-alias flag to list-domains.pl, to show non-alias domains.
Made the Website Options page available to domain owners, although only with limited fields available.
When creating a sub-server that is a sub-domain of it's parent, DNS records for the new domain will be added to the parent's zone.
Added a field on the Website Options page for making a virtual server the default website for its IP address.
Parent virtual server details are now available in sub-server post-creation scripts in the $PARENT_VIRTUALSERVER_ environment variables.
Added --reseller, --no-reseller and --any-reseller flags to list-domains.pl.
Virtual servers can now have IPv6 addresses in addition to v4, on Debian, Ubuntu, Redhat, CentOS and Fedora systems. Virtualmin will configure BIND to add IPv6 address records, and Apache to accept connections to the IPv6 address. All pages that API commands that deal with addresses have new fields and options for an optional IPv6 address.
Added the --purge and --strftime flags to backup-domain.pl, to allow automatic deletion of old backups and date-based backup destinations.
---- Changes since 3.68 ----
Updated the Nag script installer to version 2.3.2, phpMyFAQ to 2.0.13, Wordpress MU to 2.7.1, and Mantis to 1.1.7.
Added buttons to the Manage SSL Certificate page to copy a domain's cert and key to Webmin or Usermin.