@@ -172,3 +172,4 @@ collect_restart=0
 secmx_nodns=0
 usermin_switch=1
 plan_auto=1
+collect_notemp=0
