@@ -1,0 +1,12 @@
+<header>Collect drive and CPU temperatures?</header>
+
+When this is set to <b>Yes</b> (as it is by default), Virtualmin will on
+Linux systems collect average drive and CPU temperatures for display on
+the <b>System Statistics</b> page. These require that the <tt>smartctl</tt>
+and <tt>sensors</tt> commands be installed and working properly. <p>
+
+If you don't care about system temperatures or want to speed up the backup
+status collection job, you can change this to <b>No</b>. <p>
+
+<footer>
+
