@@ -4428,6 +4428,8 @@ history_stat_spamcount=Spam per minute
 history_stat_viruscount=Viruses per minute
 history_stat_rx=Network traffic received
 history_stat_tx=Network traffic sent
+history_stat_drivetemp=Drive temperature
+history_stat_cputemp=CPU temperature
 history_range=$1 from $2 to $3
 history_showing=Showing historic values for : $1
 history_none=No historic system statistics have been recorded yet.
@@ -4436,6 +4438,7 @@ history_ok=Show Selected
 history_pc=percent
 history_mbsec=MB per second
 history_kbsec=kB per second
+history_cel=degrees celsius
 history_rawdata=Download raw data..
 
 sv_title=Spam and Virus Scanning
